Fix template generation for primitives that require boxing in NoGuavaImmutableXOf recipes. Polished tests to use formatting convention. fixes #137